cmake_minimum_required( VERSION 3.16 FATAL_ERROR )

project( learn-cpp-cmake )

set (CMAKE_CXX_STANDARD 20 )
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_EXTENSIONS OFF)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set (CMAKE_OBJECT_PATH_MAX 500)
set (CMAKE_VERBOSE_MAKEFILE OFF)


#[[
set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
set (CMAKE_CXX_FLAGS "-Wall -Wextra -fsanitize=address")
SET (CMAKE_CXX_COMPILER "/usr/bin/clang++-12")
SET (CMAKE_CXX_FLAGS_DEBUG          "-g")
SET (CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
SET (CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
]]


add_subdirectory( algorithm )
add_subdirectory( cast )
add_subdirectory( data-structure )
add_subdirectory( design-pattern )
add_subdirectory( framework )
add_subdirectory( hello-world )
add_subdirectory( idiom )
add_subdirectory( interface )
add_subdirectory( interview-question )
add_subdirectory( lambda )
add_subdirectory( memory )
add_subdirectory( namespace )
add_subdirectory( oop )
add_subdirectory( qualifier )
add_subdirectory( regex )
add_subdirectory( stream )
add_subdirectory( stl )
add_subdirectory( storage  )
add_subdirectory( template )
add_subdirectory( thread )
add_subdirectory( unit-test )
add_subdirectory( utility )