project( learn-cpp-interview-question )

add_subdirectory( bubble-sort )
add_subdirectory( count-numbers-less-than-a-particular-number )
add_subdirectory( map-with-user-defined-key )
add_subdirectory( print-next-greatest-integer )
add_subdirectory( reverse-a-linked-list )
add_subdirectory( reverse-words-in-a-sentence )
add_subdirectory( sort-array-of-2-different-numbers )
add_subdirectory( sum-without-plus )

