project( learn-cpp-interview-question )

add_subdirectory( bubble-sort )
add_subdirectory( chocolate-wrapper-recycle )
add_subdirectory( count-numbers-less-than-a-particular-number )
add_subdirectory( count-consecutive-characters )
add_subdirectory( hello-world-world-hello )
add_subdirectory( map-with-user-defined-key )
add_subdirectory( print-next-greatest-integer )
add_subdirectory( reverse-a-linked-list )
add_subdirectory( reverse-words-in-a-sentence )
add_subdirectory( sort-array-of-2-different-numbers )
add_subdirectory( shift-right )
add_subdirectory( sum-without-plus )

